# FirstBevyGame

./: Cargo.toml
assets/words/: it_50k.txt
src/: main.rs
